@@ -1,16 +1,5 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ConfigureShadowRelocation
-
-buildscript {
-    repositories {
-        gradlePluginPortal()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.gradle.publish:plugin-publish-plugin:0.16.0"
-        classpath 'org.ajoberstar:gradle-git-publish:3.0.0'
-        classpath "com.github.node-gradle:gradle-node-plugin:3.1.1"
-    }
-}
+import com.github.jengelman.gradle.plugins.shadow.ShadowPlugin
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 plugins {
     id 'groovy'
@@ -18,35 +7,12 @@ plugins {
     id 'idea'
     id 'java-gradle-plugin'
     id 'signing'
+    id 'com.gradle.plugin-publish' version '1.1.0'
+    id 'org.ajoberstar.git-publish' version '4.1.1'
+    id 'com.github.node-gradle.node' version '3.5.1'
 }
 
-// Remove the gradleApi so it isn't merged into the jar file.
-configurations.named(JavaPlugin.API_CONFIGURATION_NAME) {
-    dependencies.remove(project.dependencies.gradleApi())
-}
-
-gradlePlugin {
-    automatedPublishing = false
-}
-
-apply plugin: 'com.github.johnrengelman.shadow'
-
-buildScan {
-    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-    termsOfServiceAgree = 'yes'
-    if (System.env.CI == 'true') {
-        tag 'CI'
-        if (System.env.CIRCLE_TAG) {
-            link 'VCS', "https://github.com/johnrengelman/shadow/tree/${System.env.CIRCLE_TAG}"
-        } else {
-            link 'VCS', "https://github.com/johnrengelman/shadow/tree/${System.env.CIRCLE_BRANCH}"
-        }
-        link 'VCS Commit', "https://github.com/johnrengelman/shadow/commit/${System.env.CIRCLE_SHA1}"
-        if (System.env.CI_PULL_REQUEST) {
-            link 'Pull Request', "${System.env.CI_PULL_REQUEST}"
-        }
-    }
-}
+apply plugin: ShadowPlugin
 
 apply from: file('gradle/docs.gradle')
 apply from: file('gradle/publish.gradle')
@@ -59,7 +25,7 @@ repositories {
     mavenCentral()
 }
 
-test {
+tasks.withType(Test).configureEach {
     useJUnitPlatform()
 
     if (System.env.CI == 'true') {
@@ -69,17 +35,25 @@ test {
     }
 
     systemProperty 'java.io.tmpdir', buildDir.absolutePath
+
+    // Required to test configuration cache in tests when using withDebug()
+    // https://github.com/gradle/gradle/issues/22765#issuecomment-1339427241
+    jvmArgs(
+            "--add-opens",
+            "java.base/java.util=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+    )
 }
 
-jar {
+tasks.named('shadowJar', ShadowJar) {
     from rootProject.file('LICENSE')
     from rootProject.file('NOTICE')
-}
-
-jar.enabled = false
-
-shadowJar {
-    classifier = ''
+    enableRelocation true
 }
 
 idea {
@@ -88,32 +62,14 @@ idea {
     }
 }
 
+tasks.named('ideaModule') {
+    notCompatibleWithConfigurationCache("https://github.com/gradle/gradle/issues/13480")
+}
+
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
-task downloadDependencies(type: Exec) {
+tasks.register('downloadDependencies', Exec) {
     dependsOn configurations.testRuntimeClasspath
     commandLine 'echo', 'Downloaded all dependencies'
 }
-
-tasks.build.dependsOn tasks.shadowJar
-
-project.tasks.withType(JavaCompile) {
-    // This will be the default in Gradle 5.0
-    if (!options.compilerArgs.contains("-processor")) {
-        options.compilerArgs << '-proc:none'
-    }
-}
-
-project.tasks.withType(GroovyCompile) {
-    // This will be the default in Gradle 5.0
-    if (!options.compilerArgs.contains("-processor")) {
-        options.compilerArgs << '-proc:none'
-    }
-}
-
-task relocateShadowJar(type: ConfigureShadowRelocation) {
-    target = tasks.shadowJar
-}
-
-tasks.shadowJar.dependsOn tasks.relocateShadowJar
